--- a/views_mysql/add.jade
+++ b/views_mysql/add.jade
@@ -10,10 +10,12 @@ html
         li
           a(href='/topic/'+topic.id)= topic.title
     artcle
-      form(action='/topic' method='post')
+      form(action='/topic/add' method='post')
         p
           input(type='text' name='title' placeholder='title')
         p
-          textarea(name='description')
+          textarea(name='description' placeholder='description')
+        p
+          input(type='text' name='author' placeholder='author')
         p
           input(type='submit')
