--- a/views_mysql/view.jade
+++ b/views_mysql/view.jade
@@ -22,6 +22,6 @@ html
         a(href='/topic/add') add
         if topic
           li
-            a(href='/topic/' + topic.id+'/edit') edit
+            a(href='/topic/' +topic.id+ '/edit') edit
           li
-            a(href='topic/' + topic.id+'/delete') delete
+            a(href='/topic/' + topic.id+'/delete') delete
