--- a/views_mysql/edit.jade
+++ b/views_mysql/edit.jade
@@ -10,15 +10,16 @@ html
                 li
                     a(href='/topic/'+topic.id)= topic.title
         artcle
-            form(action='/topic/add' method='post')
+            form(action='/topic/'+topic.id+'/edit' method='post')
                 p
                     input(type='text' name='title' value=topic.title placeholder='title')
                 p
-                    textarea(name='description' value=topic.desscription placeholder='description')
+                    textarea(name='description' placeholder='description')
+                        =topic.description
                 p
                     input(type='text' name='author' value=topic.author placeholder='author')
                 p
-                    input(type='submit' value='modify')
+                    input(type='submit')
 
 
             ul
